--- a/src/components/shared/styles/_themes.scss
+++ b/src/components/shared/styles/_themes.scss
@@ -70,6 +70,7 @@
 
         // Icons and Texts
         --text-general: #{constants.$color-black-1};
+         --text-general1: #{constants.$color-blackie};
         --text-primary: #{constants.$color-grey-1};
         --text-less-prominent: #{constants.$color-grey-1};
         --text-prominent: #{constants.$color-black-1};
