--- a/src/components/shared/styles/_constants.scss
+++ b/src/components/shared/styles/_constants.scss
@@ -43,7 +43,7 @@ $color-green-8: #d5e4e5;
 $color-grey: #8c84a7;
 $color-grey-1: #FFFFFF;
 $color-grey-2: #112131;
-$color-grey-3: #21657c;
+$color-grey-3: #e0e7e9;
 $color-grey-4: #209494;
 $color-grey-5: #14272c;
 $color-grey-6: #701a1a;
