--- a/src/components/shared/styles/_themes.scss
+++ b/src/components/shared/styles/_themes.scss
@@ -70,7 +70,7 @@
 
         // Icons and Texts
         --text-general: #{constants.$color-black-1};
-         --text-general1: #{constants.$color-blackie};
+        --text-general1: #{constants.$color-blackie};
         --text-primary: #{constants.$color-grey-1};
         --text-less-prominent: #{constants.$color-grey-1};
         --text-prominent: #{constants.$color-black-1};
@@ -211,6 +211,7 @@
         --general-section-3: #{constants.$color-black-5};
         --general-section-4: #{constants.$color-black-5};
         --general-section-5: #{constants.$color-black-5};
+        --general-section-16: #{constants.$color-blue-9};
         --general-section-6: #{constants.$color-grey-7};
         --general-disabled: #{constants.$color-black-4};
         --general-hover: #{constants.$color-black-5};
@@ -219,6 +220,7 @@
         // Icons and Texts
         --text-prominent: #{constants.$color-white};
         --text-general: #{constants.$color-grey};
+        --text-general1: #{constants.$color-blackie};
         --text-less-prominent: #{constants.$color-grey-7};
         --text-primary: #{constants.$color-grey-1};
         --text-disabled: #{constants.$color-black-6};
