--- a/src/components/shared/styles/_constants.scss
+++ b/src/components/shared/styles/_constants.scss
@@ -12,8 +12,8 @@
 $color-black: #0f0f11;
 $color-black-1: #241c97;
 $color-blackie: #e9eef0;
-$color-gray-6: #3b3942;
-$color-black-3: #413c2b;
+$color-gray-6: #FFFFFF;
+$color-black-3: #FFFFFF;
 $color-black-4: #27292a;
 $color-black-5: #2e3233;
 $color-black-6: #525252;
